fix footer adaptive

--- a/index.html
+++ b/index.html
@@ -598,193 +598,177 @@
           <ul class="hiring__list">
             <a href="#" class="hiring__link">
               <li class="hiring__item">
-                <div class='hiring__item-info'>
-									<span class="hiring__item-info-role">Front-End Developer</span>
-									<span class="hiring__item-info-location">Los Angeles / Remote</span>
-								</div>
+                <div class="hiring__item-info">
+                  <span class="hiring__item-info-role">Front-End Developer</span>
+                  <span class="hiring__item-info-location">Los Angeles / Remote</span>
+                </div>
                 <span class="hiring__item-arrow"><i class="fas fa-chevron-right"></i></span>
               </li>
             </a>
             <a href="#" class="hiring__link">
               <li class="hiring__item">
-                <div class='hiring__item-info'>
-									<span class="hiring__item-info-role">Community Manager</span>
-									<span class="hiring__item-info-location">New York / Full-Time</span>
-								</div>
+                <div class="hiring__item-info">
+                  <span class="hiring__item-info-role">Community Manager</span>
+                  <span class="hiring__item-info-location">New York / Full-Time</span>
+                </div>
                 <span class="hiring__item-arrow"><i class="fas fa-chevron-right"></i></span>
               </li>
             </a>
             <a href="#" class="hiring__link">
               <li class="hiring__item">
-                <div class='hiring__item-info'>
-									<span class="hiring__item-info-role">UX/UI Designer</span>
-									<span class="hiring__item-info-location">New York / Full-Time</span>
-								</div>
+                <div class="hiring__item-info">
+                  <span class="hiring__item-info-role">UX/UI Designer</span>
+                  <span class="hiring__item-info-location">New York / Full-Time</span>
+                </div>
                 <span class="hiring__item-arrow"><i class="fas fa-chevron-right"></i></span>
               </li>
             </a>
           </ul>
         </section>
         <section class="subscription">
-					<img
-						class="subscription__image"
-						src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
-						alt="Illustration Window"
-					/>
-					<div class="subscription__content">
-						<h2 class="subscription__title">Start your free trial.</h2>
-						<p class="subscription__description">
-							Get notified about company updates, news and blog posts. We hate
-							spam.
-						</p>
-						<form class="subscription__form">
-							<label
-								class="subscription__form-label sr-only"
-								for="email"
-							></label>
-							<input
-								class="subscription__form-input"
-								type="email"
-								placeholder="Enter your email"
-							/>
-							<button type="submit" class="button-blue">Get Started</button>
-						</form>
-						<span class="subscription__text">
-							Free 14-day trial · Easy setup · Cancel any time. Check out
-							<a class="subscription__link" href="">Terms of Use.</a>
-						</span>
-					</div>
-				</section>
+          <img
+            class="subscription__image"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
+            alt="Illustration Window"
+          />
+          <div class="subscription__content">
+            <h2 class="subscription__title">Start your free trial.</h2>
+            <p class="subscription__description">
+              Get notified about company updates, news and blog posts. We hate spam.
+            </p>
+            <form class="subscription__form">
+              <label class="subscription__form-label sr-only" for="email"></label>
+              <input class="subscription__form-input" type="email" placeholder="Enter your email" />
+              <button type="submit" class="button-blue">Get Started</button>
+            </form>
+            <span class="subscription__text">
+              Free 14-day trial · Easy setup · Cancel any time. Check out
+              <a class="subscription__link" href="">Terms of Use.</a>
+            </span>
+          </div>
+        </section>
       </main>
-      <!-- <footer class="footer">
-				<div class="footer__top">
-					<div class="footer__info">
-						<div class="logo">
-							<a class="logo__link" href="/">
-								<img
-									class="logo__img"
-									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
-									alt="Foundation Logo"
-								/>
-							</a>
-							<div class="logo__text">
-								<span class="logo__text-name">Foundation</span>
-								<span class="logo__text-description"
-									>Startup landing template</span
-								>
-							</div>
-						</div>
-						<p class="footer__info-desc">
-							Foundation is a website template for startups and small teams. It
-							helps to build a website in no time.
-						</p>
-						<div class="footer__info-apps">
-							<a class="footer__info-apps-link" href="#">
-								<img
-									class="footer__info-apps-img"
-									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/app-store.png"
-									alt="App Store"
-								/>
-							</a>
-							<a class="footer__info-apps-link" href="#">
-								<img
-									class="footer__info-apps-img"
-									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/google-play.png"
-									alt="Google Play"
-								/>
-							</a>
-						</div>
-					</div>
-					<div class="footer__links">
-						<h3 class="footer__links-title">Product</h3>
-						<ul class="footer__links-list">
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#">Acquire Users</a>
-							</li>
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#"
-									>Content Marketing</a
-								>
-							</li>
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#"
-									>Website Templates</a
-								>
-							</li>
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#"
-									>Customer Management</a
-								>
-							</li>
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#">Virtual Inbox</a>
-							</li>
-						</ul>
-					</div>
-					<div class="footer__links">
-						<h3 class="footer__links-title">Company</h3>
-						<ul class="footer__links-list">
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#">About Foundation</a>
-							</li>
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#">Brand Guidelines</a>
-							</li>
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#">Press Kit</a>
-							</li>
-							<li class="footer__links-list-item">
-								<a class="footer__links-list-link" href="#">Support</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="footer__bottom">
-					<ul class="footer-info__list">
-						<li class="footer-info__list-item">
-							<a class="footer-info__list-link" href="#">Terms</a>
-						</li>
-						<li class="footer-info__list-item">
-							<a class="footer-info__list-link" href="#">Privacy</a>
-						</li>
-						<li class="footer-info__list-item">
-							<a class="footer-info__list-link" href="#">License</a>
-						</li>
-					</ul>
-					<ul class="footer-social__list">
-						<li class="footer-social__list-item">
-							<a class="footer-social__list-link" href="#">
-								<img
-									class="footer-social__list-img"
-									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png"
-									alt="twitter"
-								/>
-							</a>
-						</li>
-						<li class="footer-social__list-item">
-							<a class="footer-social__list-link" href="#">
-								<img
-									class="footer-social__list-img"
-									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png"
-									alt="facebook"
-								/>
-							</a>
-						</li>
-						<li class="footer-social__list-item">
-							<a class="footer-social__list-link" href="#">
-								<img
-									class="footer-social__list-img"
-									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
-									alt="linkedin"
-								/>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</footer> -->
-      <!-- <button id="scrollToTopBtn" class="scroll-top-btn">
-				<i class="fa fa-arrow-up"></i>
-			</button> -->
+      <footer class="footer">
+        <div class="footer__top">
+          <div class="footer__info">
+            <div class="logo footer-logo">
+              <a class="logo__link" href="/">
+                <img
+                  class="logo__img logo__img--footer"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
+                  alt="Foundation Logo"
+                />
+              </a>
+              <div class="logo__text logo__text--footer">
+                <span class="logo__text-name">Foundation</span>
+                <span class="logo__text-description">Startup landing template</span>
+              </div>
+            </div>
+            <p class="footer__info-desc">
+              Foundation is a website template for startups and small teams. It helps to build a
+              website in no time.
+            </p>
+            <div class="footer__info-apps">
+              <a class="footer__info-apps-link" href="#">
+                <img
+                  class="footer__info-apps-img"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/app-store.png"
+                  alt="App Store"
+                />
+              </a>
+              <a class="footer__info-apps-link" href="#">
+                <img
+                  class="footer__info-apps-img"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/google-play.png"
+                  alt="Google Play"
+                />
+              </a>
+            </div>
+          </div>
+          <div class="footer__links">
+            <h3 class="footer__links-title">Product</h3>
+            <ul class="footer__links-list">
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">Acquire Users</a>
+              </li>
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">Content Marketing</a>
+              </li>
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">Website Templates</a>
+              </li>
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">Customer Management</a>
+              </li>
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">Virtual Inbox</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__links">
+            <h3 class="footer__links-title">Company</h3>
+            <ul class="footer__links-list">
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">About Foundation</a>
+              </li>
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">Brand Guidelines</a>
+              </li>
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">Press Kit</a>
+              </li>
+              <li class="footer__links-list-item">
+                <a class="footer__links-list-link" href="#">Support</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <ul class="footer-info__list">
+            <li class="footer-info__list-item">
+              <a class="footer-info__list-link" href="#">Terms</a>
+            </li>
+            <li class="footer-info__list-item">
+              <a class="footer-info__list-link" href="#">Privacy</a>
+            </li>
+            <li class="footer-info__list-item">
+              <a class="footer-info__list-link" href="#">License</a>
+            </li>
+          </ul>
+          <ul class="footer-social__list">
+            <li class="footer-social__list-item">
+              <a class="footer-social__list-link" href="#">
+                <img
+                  class="footer-social__list-img"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png"
+                  alt="twitter"
+                />
+              </a>
+            </li>
+            <li class="footer-social__list-item">
+              <a class="footer-social__list-link" href="#">
+                <img
+                  class="footer-social__list-img"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png"
+                  alt="facebook"
+                />
+              </a>
+            </li>
+            <li class="footer-social__list-item">
+              <a class="footer-social__list-link" href="#">
+                <img
+                  class="footer-social__list-img"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
+                  alt="linkedin"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+      <button id="scrollToTopBtn" class="scroll-top-btn">
+        <i class="fa fa-arrow-up"></i>
+      </button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
