--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       <footer class="footer">
         <div class="footer__top">
           <div class="footer__info">
-            <div class="logo footer-logo">
+            <div class="logo logo--footer">
               <a class="logo__link" href="/">
                 <img
                   class="logo__img logo__img--footer"
@@ -660,7 +660,7 @@
                 />
               </a>
               <div class="logo__text logo__text--footer">
-                <span class="logo__text-name">Foundation</span>
+                <span class="logo__text-name logo__text-name--footer">Foundation</span>
                 <span class="logo__text-description">Startup landing template</span>
               </div>
             </div>
@@ -723,6 +723,7 @@
             </ul>
           </div>
         </div>
+        <div class='footer__line'></div>
         <div class="footer__bottom">
           <ul class="footer-info__list">
             <li class="footer-info__list-item">
