fix Swiper Slider

--- a/index.html
+++ b/index.html
@@ -556,28 +556,6 @@
                   <span class="feedback__blockquote-role">Creative Director at Johnson</span>
                 </blockquote>
               </div>
-              <div class="swiper-slide">
-                <blockquote class="feedback__blockquote">
-                  <p class="feedback__blockquote-text">
-                    “Comprehensive set of startup tools for all imaginable entrepreneurial needs.
-                    Create landing pages, send emails, find freelancers. Perfect for sales,
-                    marketing, and support”
-                  </p>
-                  <cite class="feedback__blockquote-author">Viella Malkovich</cite>
-                  <span class="feedback__blockquote-role">Creative Director at Johnson</span>
-                </blockquote>
-              </div>
-              <div class="swiper-slide">
-                <blockquote class="feedback__blockquote">
-                  <p class="feedback__blockquote-text">
-                    “Comprehensive set of startup tools for all imaginable entrepreneurial needs.
-                    Create landing pages, send emails, find freelancers. Perfect for sales,
-                    marketing, and support”
-                  </p>
-                  <cite class="feedback__blockquote-author">Viella Malkovich</cite>
-                  <span class="feedback__blockquote-role">Creative Director at Johnson</span>
-                </blockquote>
-              </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
@@ -723,7 +701,7 @@
             </ul>
           </div>
         </div>
-        <div class='footer__line'></div>
+        <div class="footer__line"></div>
         <div class="footer__bottom">
           <ul class="footer-info__list">
             <li class="footer-info__list-item">
