--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               </p>
               <div class="hero__buttons">
                 <button class="button-blue">Get Started</button>
-                <button class="button-white">Learn More</button>
+                <button class="button-white button-white--color">Learn More</button>
               </div>
             </div>
             <div class="hero__image">
