--- a/index.html
+++ b/index.html
@@ -746,9 +746,9 @@
           </ul>
         </div>
       </footer>
-      <button id="scrollToTopBtn" class="scroll-top-btn">
+      <!-- <button id="scrollToTopBtn" class="scroll-top-btn">
         <i class="fa fa-arrow-up"></i>
-      </button>
+      </button> -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
