--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 <a class="cards__list-link" href="">
                   <li class="cards__list-item">
                     <img
-                      class="cards__list-item-img"
+                      class="cards__list-item-img cards__list-item-img--size"
                       src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
                       alt="user-role"
                     />
