--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <a class="nav__list-link nav__list-link--active" href="#">Home </a>
                 </li>
                 <li class="nav__list-item">
-                  <a class="nav__list-link" href="#">Stories</a>
+                  <a class="nav__list-link nav__list-link--test" href="#">Stories</a>
                 </li>
                 <li id="library" class="nav__list-item">
                   <span class="nav__list-link" href="#">Library</span>
