--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
         </div>
       </header>
       <main class="main">
-        <section class="hero">
-          <div class="hero__inner">
-            <div class="hero__content">
-              <h1 class="hero__title">Build stunning websites & apps.</h1>
-              <p class="hero__description">
+        <section class="headline">
+          <div class="headline__inner">
+            <div class="headline__content">
+              <h1 class="headline__title">Build stunning websites & apps.</h1>
+              <p class="headline__description">
                 Create live segments and target the right people for messages based on their
                 behaviors.
               </p>
-              <div class="hero__buttons">
+              <div class="headline__buttons">
                 <button class="button-blue">Get Started</button>
                 <button class="button-white button-white--color">Learn More</button>
               </div>
             </div>
-            <div class="hero__image">
+            <div class="headline__image">
               <img
-                class="hero__img"
+                class="headline__img"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
                 alt="Image	ouch"
               />
