--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@
             <div class="communicate__list">
               <div class="communicate__list-item">
                 <p class="list-item__desc">
-                  <strong>Subscriptions.</strong> Foundation works with the tools and services you
-                  already use every day.
+                  <strong>orders.</strong> Foundation works with the tools and services you already
+                  use every day.
                 </p>
-                <a class="list-item__link" href="#">Learn more about subscriptions</a>
+                <a class="list-item__link" href="#">Learn more about orders</a>
               </div>
               <div class="communicate__list-item">
                 <p class="list-item__desc">
@@ -604,25 +604,25 @@
             </a>
           </ul>
         </section>
-        <section class="subscription">
+        <section class="order">
           <img
-            class="subscription__image"
+            class="order__image"
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
             alt="Illustration Window"
           />
-          <div class="subscription__content">
-            <h2 class="subscription__title">Start your free trial.</h2>
-            <p class="subscription__description">
+          <div class="order__content">
+            <h2 class="order__title">Start your free trial.</h2>
+            <p class="order__description">
               Get notified about company updates, news and blog posts. We hate spam.
             </p>
-            <form class="subscription__form">
-              <label class="subscription__form-label sr-only" for="email"></label>
-              <input class="subscription__form-input" type="email" placeholder="Enter your email" />
+            <form class="order__form">
+              <label class="order__form-label sr-only" for="email"></label>
+              <input class="order__form-input" type="email" placeholder="Enter your email" />
               <button type="submit" class="button-blue">Get Started</button>
             </form>
-            <span class="subscription__text">
+            <span class="order__text">
               Free 14-day trial · Easy setup · Cancel any time. Check out
-              <a class="subscription__link" href="">Terms of Use.</a>
+              <a class="order__link" href="">Terms of Use.</a>
             </span>
           </div>
         </section>
