fix name folder audio

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </button>
           </div>
           <div class="header__audio">
-            <audio id="myAudio" src="./aydio/muz.mp3" preload="auto" loop></audio>
+            <audio id="myAudio" src="./audio/muz.mp3" preload="auto" loop></audio>
             <div class="audio-player">
               <button class="play-btn" id="playButton" onclick="togglePlay()">
                 <i class="fa fa-play pulsating-icon"></i>
