--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </li>
               </ul>
             </nav>
-            <button class="button-blue button-blue--mobile btn-test">
+            <button class="button-blue button-blue--mobile">
               Get Started
               <span class="sr-only"> Get Started </span>
             </button>
