--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <div class="communicate__list">
               <div class="communicate__list-item">
                 <p class="list-item__desc">
-                  <strong>orders.</strong> Foundation works with the tools and services you already
+                  <strong>Subscriptions.</strong> Foundation works with the tools and services you already
                   use every day.
                 </p>
                 <a class="list-item__link" href="#">Learn more about orders</a>
