--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
               <span class="sr-only"> Get Started </span>
             </button>
           </div>
-          <div class="header__audio">
+          <!-- <div class="header__audio">
             <audio id="myAudio" src="./audio/muz.mp3" preload="auto" loop></audio>
             <div class="audio-player">
               <button class="play-btn" id="playButton" onclick="togglePlay()">
                 <i class="fa fa-play pulsating-icon"></i>
               </button>
             </div>
-          </div>
+          </div> -->
           <div class="mobile-menu-icon" onclick="toggleMobileMenu()">
             <i id="menuIcon" class="fa fa-bars"></i>
           </div>
