--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -132,25 +138,23 @@
       </header>
       <main class="main">
         <section class="headline">
-          <div class="headline__inner">
-            <div class="headline__content">
-              <h1 class="headline__title">Build stunning websites & apps.</h1>
-              <p class="headline__description">
-                Create live segments and target the right people for messages based on their
-                behaviors.
-              </p>
-              <div class="headline__buttons">
-                <button class="button-blue">Get Started</button>
-                <button class="button-white button-white--color">Learn More</button>
-              </div>
+          <div class="headline__content">
+            <h1 class="headline__title">Build stunning websites & apps.</h1>
+            <p class="headline__description">
+              Create live segments and target the right people for messages based on their
+              behaviors.
+            </p>
+            <div class="headline__buttons">
+              <button class="button-blue">Get Started</button>
+              <button class="button-white button-white--color">Learn More</button>
             </div>
-            <div class="headline__image">
-              <img
-                class="headline__img"
-                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
-                alt="Image	ouch"
-              />
-            </div>
+          </div>
+          <div class="headline__image">
+            <img
+              class="headline__img"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
+              alt="Image	ouch"
+            />
           </div>
         </section>
         <section class="about">
@@ -377,8 +381,8 @@
             <div class="communicate__list">
               <div class="communicate__list-item">
                 <p class="list-item__desc">
-                  <strong>Subscriptions.</strong> Foundation works with the tools and services you already
-                  use every day.
+                  <strong>Subscriptions.</strong> Foundation works with the tools and services you
+                  already use every day.
                 </p>
                 <a class="list-item__link" href="#">Learn more about orders</a>
               </div>
