--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div id="overlay"></div>
       <header class="header">
         <div class="header__inner">
-          <div class="logo">
+          <div class="logo logo__header">
             <a class="logo__link" href="/">
               <img
                 class="logo__img"
