--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="logo logo__header">
             <a class="logo__link" href="/">
               <img
-                class="logo__img"
+                class="logo__img logo__img-header"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon.png"
                 alt="Foundation Logo"
               />
