--- a/index.html
+++ b/index.html
@@ -31,131 +31,133 @@
   <body>
     <div class="wrapper">
       <div id="overlay"></div>
-      <header class="header">
-        <div class="header__inner">
-          <div class="logo logo__header">
-            <a class="logo__link" href="/">
-              <img
-                class="logo__img logo__img-header"
-                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon.png"
-                alt="Foundation Logo"
-              />
-            </a>
-            <div class="logo__text">
-              <span class="logo__text-name">Foundation</span>
-              <span class="logo__text-description">Startup landing template</span>
+      <div class='top-wrap'>
+        <header class="header">
+          <div class="header__inner">
+            <div class="logo logo__header">
+              <a class="logo__link" href="/">
+                <img
+                  class="logo__img logo__img-header"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon.png"
+                  alt="Foundation Logo"
+                />
+              </a>
+              <div class="logo__text">
+                <span class="logo__text-name">Foundation</span>
+                <span class="logo__text-description">Startup landing template</span>
+              </div>
             </div>
-          </div>
-          <div class="header__content">
-            <nav class="nav">
-              <ul class="nav__list">
-                <li class="nav__list-item">
-                  <a class="nav__list-link nav__list-link--active" href="#">Home </a>
-                </li>
-                <li class="nav__list-item">
-                  <a class="nav__list-link nav__list-link--test" href="#">Stories</a>
-                </li>
-                <li id="library" class="nav__list-item">
-                  <span class="nav__list-link" href="#">Library</span>
-                  <i class="fa-solid fa-chevron-down fa-sm"></i>
-                  <div id="dropdown" class="dropdown">
-                    <ul class="dropdown__list">
-                      <li class="dropdown__list-item">
-                        <a class="dropdown__list-link" href="#">
-                          <span class="dropdown__list-title dropdown__list-title--active"
-                            >Acquire Users</span
-                          >
-                          <p class="dropdown__list-description">
-                            Work with the tools and services you use.
-                          </p>
-                        </a>
-                      </li>
-                      <li class="dropdown__list-item">
-                        <a class="dropdown__list-link" href="#">
-                          <span class="dropdown__list-title">Engage Customers</span>
-                          <p class="dropdown__list-description">
-                            Get started with our simple snippet of JavaScript.
-                          </p>
-                        </a>
-                      </li>
-                      <li class="dropdown__list-item">
-                        <a class="dropdown__list-link" href="#">
-                          <span class="dropdown__list-title">Book Appointments</span>
-                          <p class="dropdown__list-description">
-                            We offer measures like 2FA to ensure the safety.
-                          </p>
-                        </a>
-                      </li>
-                      <li class="dropdown__list-item">
-                        <a class="dropdown__list-link" href="#">
-                          <span class="dropdown__list-title">Generate Leads</span>
-                          <p class="dropdown__list-description">
-                            Become a better designer by learning this courses.
-                          </p>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </li>
-              </ul>
-            </nav>
-            <button class="button-blue button-blue--mobile">
-              Get Started
-              <span class="sr-only"> Get Started </span>
-            </button>
-          </div>
-          <!-- <div class="header__audio">
-            <audio id="myAudio" src="./audio/muz.mp3" preload="auto" loop></audio>
-            <div class="audio-player">
-              <button class="play-btn" id="playButton" onclick="togglePlay()">
-                <i class="fa fa-play pulsating-icon"></i>
+            <div class="header__content">
+              <nav class="nav">
+                <ul class="nav__list">
+                  <li class="nav__list-item">
+                    <a class="nav__list-link nav__list-link--active" href="#">Home </a>
+                  </li>
+                  <li class="nav__list-item">
+                    <a class="nav__list-link nav__list-link--test" href="#">Stories</a>
+                  </li>
+                  <li id="library" class="nav__list-item">
+                    <span class="nav__list-link" href="#">Library</span>
+                    <i class="fa-solid fa-chevron-down fa-sm"></i>
+                    <div id="dropdown" class="dropdown">
+                      <ul class="dropdown__list">
+                        <li class="dropdown__list-item">
+                          <a class="dropdown__list-link" href="#">
+                            <span class="dropdown__list-title dropdown__list-title--active"
+                              >Acquire Users</span
+                            >
+                            <p class="dropdown__list-description">
+                              Work with the tools and services you use.
+                            </p>
+                          </a>
+                        </li>
+                        <li class="dropdown__list-item">
+                          <a class="dropdown__list-link" href="#">
+                            <span class="dropdown__list-title">Engage Customers</span>
+                            <p class="dropdown__list-description">
+                              Get started with our simple snippet of JavaScript.
+                            </p>
+                          </a>
+                        </li>
+                        <li class="dropdown__list-item">
+                          <a class="dropdown__list-link" href="#">
+                            <span class="dropdown__list-title">Book Appointments</span>
+                            <p class="dropdown__list-description">
+                              We offer measures like 2FA to ensure the safety.
+                            </p>
+                          </a>
+                        </li>
+                        <li class="dropdown__list-item">
+                          <a class="dropdown__list-link" href="#">
+                            <span class="dropdown__list-title">Generate Leads</span>
+                            <p class="dropdown__list-description">
+                              Become a better designer by learning this courses.
+                            </p>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </li>
+                </ul>
+              </nav>
+              <button class="button-blue button-blue--mobile">
+                Get Started
+                <span class="sr-only"> Get Started </span>
               </button>
             </div>
-          </div> -->
-          <div class="mobile-menu-icon" onclick="toggleMobileMenu()">
-            <i id="menuIcon" class="fa fa-bars"></i>
+            <!-- <div class="header__audio">
+              <audio id="myAudio" src="./audio/muz.mp3" preload="auto" loop></audio>
+              <div class="audio-player">
+                <button class="play-btn" id="playButton" onclick="togglePlay()">
+                  <i class="fa fa-play pulsating-icon"></i>
+                </button>
+              </div>
+            </div> -->
+            <div class="mobile-menu-icon" onclick="toggleMobileMenu()">
+              <i id="menuIcon" class="fa fa-bars"></i>
+            </div>
           </div>
-        </div>
-        <div class="mobile-menu">
-          <nav class="mobile-nav">
-            <ul class="mobile-nav__list">
-              <li class="mobile-nav__list-item">
-                <a class="mobile-nav__list-link" href="#">Home</a>
-              </li>
-              <li class="mobile-nav__list-item">
-                <a class="mobile-nav__list-link" href="#">Stories</a>
-              </li>
-              <li class="mobile-nav__list-item">
-                <a class="mobile-nav__list-link" href="#">Library</a>
-              </li>
-            </ul>
-            <button class="mobile-menu-btn">
-              Get Started
-              <span class="sr-only"> Get Started </span>
-            </button>
-          </nav>
-        </div>
-      </header>
-      <section class="headline">
-        <div class="headline__content">
-          <h1 class="headline__title">Build stunning websites & apps.</h1>
-          <p class="headline__description">
-            Create live segments and target the right people for messages based on their
-            behaviors.
-          </p>
-          <div class="headline__buttons">
-            <button class="button-blue">Get Started</button>
-            <button class="button-white button-white--color">Learn More</button>
+          <div class="mobile-menu">
+            <nav class="mobile-nav">
+              <ul class="mobile-nav__list">
+                <li class="mobile-nav__list-item">
+                  <a class="mobile-nav__list-link" href="#">Home</a>
+                </li>
+                <li class="mobile-nav__list-item">
+                  <a class="mobile-nav__list-link" href="#">Stories</a>
+                </li>
+                <li class="mobile-nav__list-item">
+                  <a class="mobile-nav__list-link" href="#">Library</a>
+                </li>
+              </ul>
+              <button class="mobile-menu-btn">
+                Get Started
+                <span class="sr-only"> Get Started </span>
+              </button>
+            </nav>
           </div>
-        </div>
-        <div class="headline__image">
-          <img
-            class="headline__img"
-            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
-            alt="Image	ouch"
-          />
-        </div>
-      </section>
+        </header>
+        <section class="headline">
+          <div class="headline__content">
+            <h1 class="headline__title">Build stunning websites & apps.</h1>
+            <p class="headline__description">
+              Create live segments and target the right people for messages based on their
+              behaviors.
+            </p>
+            <div class="headline__buttons">
+              <button class="button-blue">Get Started</button>
+              <button class="button-white button-white--color">Learn More</button>
+            </div>
+          </div>
+          <div class="headline__image">
+            <img
+              class="headline__img"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
+              alt="Image	ouch"
+            />
+          </div>
+        </section>
+      </div>
       <main class="main">
         <section class="about">
           <div class="about__inner">
